# jublia-test

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Jublia Test API.postman_collection.json  Makefile  celery_config.py  config.py  docker-compose.yaml  env.example  env.example.sh  manage.py  pyproject.toml  readme.md  requirements.txt
app/: __init__.py  celery_worker.py  tasks.py
app/models/: base_model.py  email.py
app/routes/: email.py
app/schemas/: save_email.py
app/utils/: constants.py  email.py  responses.py
migrations/: env.py
migrations/versions/: 39d4a6e5874f_stored_email_table.py
