[tool.poetry]
name = "test-flask"
version = "0.1.0"
description = ""
authors = ["Andhika Samudra <andhikasamudrawibawa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.2"
sqlalchemy = "^2.0.27"
flask-migrate = "^4.0.5"
psycopg2 = "^2.9.9"
flask-script = "^2.0.6"
pytz = "^2024.1"
flask-mail = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
